-----BEGIN PGP PRIVATE KEY BLOCK-----
lQPGBF4Voj4BCADMadISO9yCDWMqaIvLSpLbazvjz7Y5Sqdzn7dW0dt1LLbxlnGw
PAq4THeI5/6plotK1sOMVFh7iy57kwYUgzKnWnW5hNDPtaTCWDmrOftiHm0Q/fj2
Zsy3aX0XuySQz7oycTnQ52p3zqGDlnH7zgPQV9dCCAIQMFbJZkoNpZxMRMN2Lnph
112Oi7ujO5/gIcrxLBQXe9zHVU9DT1C1JjY4eTajU9vg+muslwhoT633vYvuhj1q
UBnn6ZLUitw+Z8d6S9B8SEqcbd5O3ODGKhToDK9tC8rZCDFgmgcZYAZnuaJ2/bQB
uePiCKf4jkGpdtpAB4HIr2lGvK2rWbW0l2KpABEBAAH+BwMCQtDwzCTcteP/Cbg9
9DugKCnTbSsnUwAuA+oWUdkVCkrL6pvFIPXkgpCq7Af2E3JLgYnKK6AVsbDkHPS2
+UeZRgfnoYZJBH59pHbjwQuz7nKF10BikDIQwc5+fNuIg+GgD3bfsRrRwQMkrl5/
T3KVnw8I6TinGGsdA+UpODf61UQNYajuAq3P3GswpvbpYHLadHz5hmRjYzTRUnfX
jn26DhxRH6m6ulp630QHTvDCzI6TrlvgI4ZGaowBCGbBuDb+gUL3HaBtm8ZDokRH
pa5FtI1kpujigZuZ0AvmeFXOwZsAsPsC1msmnq5PlOULovuY9/8tEgPBjV1jee7u
9ZOnsdmO06SQ2o7FLL7sVZW8xK0WeRZMHiv/sm+yYI5q+EFJXYBpHMUO3Q+xwNk6
64Uj1PnYLjTM0VRrt144LOpyGCuBBmeGqCVp1HTHshK2qSv+hZXFYowl0ia7BQpm
Lh2dkUQs2pa5WmD8XHJnPdXN5FOXJvnLNHgreAwklXk2+TDXT00Vb5dYfvZ1p2Cp
IWmx6gV8qUy9EQIHp0vTLJPbF1t2YQGvUrHdcDrHPW83gF6ydMmdtfSASfP47ZU9
Xkyqj7WdyZz+q0heW1R5MUxrYYK0hkSN1wiB/SR+giOuEwJ8qX95cs1PuJXmYZrp
zwrR2oKMrzWR78zi2rDHoTQUEj/y4RU/wOQReMUHHljFv8ROfLGMs/zJUVKkq7uB
DODWFM1XA/uhpI8rwIyox3tiBf4v2PFzwotUAiOrpHej8LochTMoTxL4nglsAEbw
K9e0gzAzYyiR1EHBdIIsAY2pwkxZz52aFqL0KwxKtBFYWx/VApm+FcT0OQsJO3VU
YFR11x5pAf1cmfq36SoCiq5HQnyHRYNzJ9k2b1P6QK6as4+ZWSw3f/Mmfcbe4Swt
I+hFG77L8oOltEhtb3NpcCAoVGhpcyBpcyBtb3NpcCBtYXZlbiBjZW50cmFsIHJl
cG8pIDxtb3NpcC5lbWFpbG5vdGlmaWVyQGdtYWlsLmNvbT6JAT8EEwECACkFAl4V
oj4CGwMFCQPCZwAHCwkIBwMCAQYVCAIJCgsEFgIDAQIeAQIXgAAKCRBO51UqH9Be
ZNhACACnX5S8h/B/dyBWDlmULbXtOwrbuUoFm4AaQSlGKrkxaYQzoaZTAef3IpOX
mN50sLoVmtbum8Kv0ehr5Z7B+SVJJiDPKBBwseBqkeWavC6GWs6q1cnFgZGaeyIy
gNpHNTMoS1Ey5nT7vf5qIu/GUQAb0lutuDVYkscqMqQDJeIR4+KpS9iBAxMr9vzs
Cs/k7e88pOv5hc6bXtzM2rEnSw3bec4SBrPkKH2SOyKkNQvxkmt0dd7JYl3fvRf+
/nncitdLIoEQi+UrJjN2M/0In3hOfkXeSvb8eTUy7wj6DXXRYRaV6Xg/DdyS3YfP
JoPgETrCNbSTwLscfyWkt9+TOfvZnQPFBF4Voj4BCACrlB3BHx0yiJ8pTo/dyXgk
rWwVAtmnmozWUwEhnb+tk5RUybILchwu/m+lGF73cAQfiWwmtTb+d7lab5dp6wNS
phJtsMAhId8EN0PJNig0NiZtAD6UzQnVcnD4zdaQ8IKsGA5Ar/AfWXQvQrhWP4b1
OCjpIJPjmMokDQtiMCrdLSqBjOHlG+3lbZRUPbfkNGq2l83n002M3D9pEi3emSDz
coSU0kYkVkW1y8k0bzEAJJeJBfbKdyt6rbgeUPRhqT+zSZheCwdQMSo2A39dpxU/
X6n48yKlvIt4AXOloCNW1u1eVU8O666gqwFKyQn9xyb+uzydO4CWLzarLQombbwZ
ABEBAAH+BwMCNYo5MHWGGLn/A7ZeeuCoZfgxQVb4pNZBvW94/Oqd7gP8Rb4MOqry
0cTzy8fr8fLvE2PRCVdhAMyvenSZKzKPz5+JWN9ZiE62Xgfy3Waq8Ij6HKf4K6zb
zwyPMwDKx8DySCxOPgvT/bYVQh9S2xGD9FGdYEcJXRJbOgbSlwLC/aJeS4NEuoMg
TzD5bp4bMnzO9BGnuQJ/NT7w91Bw6PssXEAUXj8wHHIeelBj+s7+du/LVWa7R2eh
2JWwAbFZQfD1mkxXS8M6qcHqeSwuvrngM1A7EBsCkOhiG4dB6hAELes9lDtNy/LU
QS6pOZdzd+hffISRPXOEyumZHwPtVTgeHO0zyM6C//bHu9UcecRL+SReZjcQDfYc
i3VKJeejDYvpUavhFLZe8dWZe57Cgx/fbgU5yHUDr6srphLquCTvqOHIIsuNAxEF
4sQNU88p2aBGqIhF9K/LYFvJCXHtkAs2KjU/uYZrmtSr2z6hj4ENvIsI0hLpzE/M
ltpypXZxMQ/MVRUq9KmQHFF7KLvkHkpL2cBEV9oFITLIkHhWjqT3XYy3YiLn/OVW
w8JGi5m7xcwy8peV8wD4v2eHKq1uJL4R36j6g9+TgFdRLQ6j7r/kC5IBJ1+LusEL
Z1mLD0Mr2tyAvZPYrC3TCxSlRstw8dlRgY96pDnGPApR+rOnFNc/hkrk6xsTSy+R
Povhr/kQljNrcHe5ofhtiRh5Zg3jQdjcs2OuKvDaGfAJnzkUrtm5t12jvzLylRrZ
9mbeHg4zF44bawMms00eRRn1+gzATmwGlnh+n78sr+ddJOCAo+qt5jRccs89BqB5
8ADCRkD2jbF87pOjH81k8Tl9kkBzlxN7T/8MeH2zDLSim04Jw2b+XtCRFUE6kXp9
nuXevQDiyMUHG0gEXXu/pQARhfOu+b77PDH1JtmJASUEGAECAA8FAl4Voj4CGwwF
CQPCZwAACgkQTudVKh/QXmQRQwf/cGctCLHQ/28mruUo6bFTTw6Euwruzo33eIxQ
3iO83u/AyIF1rCK21kbtfFHW14RVDSWThCt5ckDr8aTdnBo0sgB1Xthoq+4P+fqp
DDPtvMKRlPji+3owH7qfLx5gFIeqLZLYRzxrkOzdqGJPSVSr5ujoz7FnTG+eIiUt
sV0PBU7N6KEUuv24rpEa4KGJl+tqAyQ+AnAod1LzFLJV7Quy/xV/uIZj8f8Fmvoj
jrrQPsy4DnI0teUgfqR+OyR8BwezSVq//p8ZpGwlOrTjHcs50gk4mDKBdwCnrsXA
LKQ+OeBIqHqvlmegsmOmNu/EP4kp1TT+k9S2ugnTjXWjgUaXQA==
=6YF6
-----END PGP PRIVATE KEY BLOCK-----<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<scm>
		<connection>scm:git:git://github.com/mosip/mosip-ref-impl.git</connection>
		<developerConnection>scm:git:ssh://github.com:mosip/mosip-ref-impl.git</developerConnection>
		<url>https://github.com/mosip/mosip-ref-impl</url>
		<tag>HEAD</tag>
	</scm>

	<artifactId>biosdk-client</artifactId>
	<groupId>io.mosip.biosdk</groupId>
	<version>1.2.0.1</version>
	<name>biosdk-client</name>

	<description>Sample implementation of biometrics SDK client</description>
	<url>https://github.com/mosip/mosip-ref-impl</url>

	<licenses>
		<license>
			<name>MPL 2.0</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mosip</name>
			<email>mosip.emailnotifier@gmail.com</email>
			<organization>io.mosip</organization>
			<organizationUrl>https://github.com/mosip/mosip-ref-impl</organizationUrl>
		</developer>
	</developers>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<properties>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<maven.deploy.version>2.8.1</maven.deploy.version>
		<maven.javadoc.version>3.2.0</maven.javadoc.version>
		<maven.assembly.version>3.3.0</maven.assembly.version>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
		<maven.jacoco.plugin.version>0.8.5</maven.jacoco.plugin.version>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
		<jackson.version>2.12.1</jackson.version>
		<!-- Lombok -->
		<lombok.version>1.18.8</lombok.version>

		<!-- Core -->
		<springframework.version>5.0.6.RELEASE</springframework.version>

		<!-- Kernel -->
		<kernel.logger.logback.version>1.2.0.1</kernel.logger.logback.version>
		<kernel.core.version>1.2.0.1</kernel.core.version>
		<kernel.biometrics.api.version>1.2.0.1</kernel.biometrics.api.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-biometrics-api</artifactId>
			<version>${kernel.biometrics.api.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>
            			spring-boot-starter-security
            		</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.mosip.kernel</groupId>
					<artifactId>kernel-core</artifactId>
				</exclusion>
            	<exclusion>
            		<groupId>com.fasterxml.jackson.core</groupId>
            		<artifactId>jackson-databind</artifactId>
            	</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-logger-logback</artifactId>
			<version>${kernel.logger.logback.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-security</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-test</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework.data</groupId>
					<artifactId>spring-data-jpa</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.mosip.kernel</groupId>
					<artifactId>kernel-core</artifactId>
				</exclusion>
                <exclusion>
                	<groupId>com.fasterxml.jackson.core</groupId>
                	<artifactId>jackson-databind</artifactId>
                </exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${springframework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>


		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.11</version>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
			<version>1.7.25</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>1.7.25</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.6</version>
		</dependency>

		<!-- testing temphttps://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>

		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-core</artifactId>
			<version>${kernel.core.version}</version>
        	<exclusions>
        		<exclusion>
        			<groupId>com.fasterxml.jackson.core</groupId>
        			<artifactId>jackson-databind</artifactId>
        		</exclusion>
        		<exclusion>
        			<groupId>com.fasterxml.jackson.core</groupId>
        			<artifactId>jackson-annotations</artifactId>
        		</exclusion>
        	</exclusions>
        </dependency>
        <dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-jaxb-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<skip>false</skip>
					<argLine>
                        ${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
                    </argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<!--<configuration><skip>true</skip></configuration>-->
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${maven.jacoco.plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven.deploy.version}</version>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven.javadoc.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doclint>none</doclint>
				</configuration>
			</plugin>

			<!--            <plugin>-->
			<!--                <groupId>org.apache.maven.plugins</groupId>-->
			<!--                <artifactId>maven-gpg-plugin</artifactId>-->
			<!--                <version>1.5</version>-->
			<!--                <executions>-->
			<!--                    <execution>-->
			<!--                        <id>sign-artifacts</id>-->
			<!--                        <phase>verify</phase>-->
			<!--                        <goals>-->
			<!--                            <goal>sign</goal>-->
			<!--                        </goals>-->
			<!--                        <configuration>-->
			<!--                            <gpgArguments>-->
			<!--                                <arg>&#45;&#45;pinentry-mode</arg>-->
			<!--                                <arg>loopback</arg>-->
			<!--                            </gpgArguments>-->
			<!--                        </configuration>-->
			<!--                    </execution>-->
			<!--                </executions>-->
			<!--            </plugin>-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven.assembly.version}</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>io.mosip.biosdk.client.impl.spec_1_0.Client_V_1_0</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
					</includeOnlyProperties>
					<commitIdGenerationMode>full</commitIdGenerationMode>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<!-- <format>json</format> -->
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>sonar</id>
			<properties>
				<sonar.sources>.</sonar.sources>
				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
				<sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
			</properties>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonarsource.scanner.maven</groupId>
						<artifactId>sonar-maven-plugin</artifactId>
						<version>${maven.sonar.plugin.version}</version>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sonar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
